# hyperfast-template

./: .copier-config.yaml  .copierignore  .gitignore  .pre-commit-config.yaml  .releaserc.json  .version  404.html  CHANGELOG.md  Makefile  README.md  copier.yaml  index.html  mkdocs.yaml  package-lock.json  package.json  pyproject.toml  sitemap.xml
.copier-template/: .envrc.jinja  .gitignore.jinja  .pre-commit-config.yaml  .releaserc.json.jinja  Makefile.jinja  README.md.jinja  mkdocs.yaml.jinja  package.json.jinja  pyproject.toml.jinja  {% if project_name != 'hyperfast-template' %}README.md{% endif %}.jinja
.copier-template/.github/workflows/: deploy-docs.yaml  deploy-docs.yaml.jinja  prerelease.yaml.jinja  release.yaml  release.yaml.jinja  {% if project_name != 'hyperfast-template' %}prerelease.yaml{% endif %}  (+3 more)
.copier-template/docs/: index.md.jinja  {% if 'github.io' not in documentation_url %}CNAME{% endif %}.jinja  {% if project_name == 'hyperfast-template'}CNAME{% endif %}
.github/workflows/: conventional-label.yaml  deploy-docs.yaml  labeler.yml  prerelease.yaml  release-drafter.yaml  release-patch.yaml  release-test.yaml  release.yaml  test.yaml
api/: index.html
docs/: CHANGELOG.md  CNAME  features.md  index.md  usage.md
features/: index.html
search/: search_index.json
tests/copier/: .copier-config.yaml  .copierignore  CONTRIBUTING.md  Makefile  mkdocs.yaml
tests/copier/docs/: index.md
tmp/: .copier-config.yaml  .pre-commit-config.yaml  .releaserc.json  README.md  package.json
tmp/docs/: CNAME
usage/: index.html
(+9 files in other folders)
