[tool.poetry]
name = "hyperfast-template"
description = "A general template that helps you jump start your project"
authors = ["Young Joon Lee <entelecheia@hotmail.com>"]
license = "MIT"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.8.1"
python-semantic-release = "^7.33.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.1"
tag_format = "v$version"

[tool.semantic_release]
branch = "main"
version_pattern = ".version:{version}"
version_source = "tag"
commit_version_number = true # required for version_source = "tag"
commit_subject = "chore(release): :rocket: {version} [skip ci]"
major_emoji = ":boom:"
minor_emoji = ":sparkles:, :children_crossing:, :lipstick:, :iphone:, :egg:, :chart_with_upwards_trend:"
patch_emoji = ":lock:, :bug:, :zap:, :goal_net:, :alien:, :wheelchair:, :speech_balloon:, :mag:, :apple:, :penguin:, :checkered_flag:, :robot:, :green_apple:"
use_textual_changelog_sections = true
prerelease_tag = "rc"
major_on_zero = true
tag_commit = true
changelog_file = "CHANGELOG.md"
upload_to_repository = false
upload_to_release = false
build_command = false
dist_path = "dist"
hvcs = "github" # hosting version control system, gitlab is also supported
